--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -12,6 +12,12 @@
     background: url("../images/баннер2.jpg") left top;
 }
 
+.intro__inner1 {
+    display: flex;
+    border-bottom: 1px solid rgba(@gray, 30%);
+    padding-bottom: 20px;
+}
+
 .intro__cont {
     width: 50%;
 }
