--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -18,6 +18,13 @@
     padding-bottom: 20px;
 }
 
+.intro__inner2 {
+    display: flex;
+    border-bottom: 1px solid rgba(@gray, 30%);
+    padding-bottom: 295px;
+    background: url("../images/banerWorks.jpg") left top;
+}
+
 .intro__cont {
     width: 50%;
 }
