--- a/css/blocks/counteiner.less
+++ b/css/blocks/counteiner.less
@@ -7,3 +7,18 @@
     padding-right: 15px;
     margin: 0 auto;
 }
+
+.container-fluid {
+    width: 100%;
+    max-width: 1200px; 
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.col-4
+{
+    align-items: center;
+}
