--- a/css/style.less
+++ b/css/style.less
@@ -48,3 +48,10 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/intro";
 @import "blocks/social";
 @import "blocks/balls";
+@import "blocks/works";
+@import "blocks/portfolio";
+@import "blocks/work";
+@import "blocks/btn";
+@import "blocks/about";
+@import "blocks/helpers";
+@import "blocks/footer";
